# snake

./: .gitpod.yml  Cargo.toml  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: web.yml
src/: food.rs  main.rs  movement.rs
